--- a/microservicecloud-eureka-8000/src/main/resources/application.yml
+++ b/microservicecloud-eureka-8000/src/main/resources/application.yml
@@ -3,9 +3,10 @@ server:
   port: 8000
 eureka:
   instance:
-    hostname: localhost # eureka服务端的实例名称
+    hostname: eureka8000.com # eureka服务端的实例名称
   client:
     register-with-eureka: false # false表示不向注册中心注册自己
     fetch-registry: false # false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/ # 设置eureka交互地址
+      #defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/ # 设置eureka交互地址
+      defaultZone: http://eureka8001.com:8001/eureka/,http://eureka8002.com:8002/eureka/ # 设置eureka交互地址
