--- a/microservicecloud-consumer-8092/src/main/resources/application.yml
+++ b/microservicecloud-consumer-8092/src/main/resources/application.yml
@@ -4,3 +4,8 @@ spring:
     name: microservicecloud-consumer-8092
 server:
   port: 8092
+eureka:
+  client:
+    register-with-eureka: false
+    service-url:
+      defaultZone:http://eureka8000.com:8000/eureka,http://eureka8001.com:8001/eureka,http://eureka8002.com:8002/eureka
